--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
       <a class="btn" id="btn-login" href="/login">Giriş</a>
       <a class="btn" id="btn-register" href="/register">Kayıt Ol</a>
       <a class="btn" id="btn-market" href="/market">Market</a>
-      <a class="btn" id="btn-orders" href = "/siparis">Siparişler</a>
-      <a class="btn" id="btn-profile" href="/profil" >Profil</a>
+      <a class="btn" id="btn-orders" href= "/siparis">Siparişler</a>
+      <a class="btn" id="btn-profile" href="/profile" >Profil</a>
       <a class="btn btn--primary" id="btn-cart" href="/sepet">Sepet (0)</a>
       <a class="btn" id="btn-logout" style="display:none" href = "/cikis">Çıkış Yap</a>
     </nav>
