--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,11 +21,11 @@
         </div>
 
         <nav class="nav">
-            <a class="btn" href="login.html">Giriş</a>
-            <a class="btn btn--primary" href="register.html">Kayıt Ol</a>
-            <a class="btn" href="market.html">Market</a>
-            <a class="btn" href="orders.html">Siparişler</a>
-            <a class="btn" href="profile.html">Profil</a>
+            <a class="btn" href="/login">Giriş</a>
+            <a class="btn btn--primary" href="/register">Kayıt Ol</a>
+            <a class="btn" href="/market">Market</a>
+            <a class="btn" href="/orders">Siparişler</a>
+            <a class="btn" href="/profile">Profil</a>
         </nav>
     </header>
 
